# krastor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/fuzz-core/: Cargo.toml
crates/fuzz-core/src/: crash.rs  executor.rs  fuzzer.rs  invariant.rs  lib.rs  mutator.rs
crates/fuzz-core/tests/: advantages.rs  disadvantages.rs  integration_test.rs  proptest_vs_krastor.rs  smoke_test.rs
crates/idl-parser/: Cargo.toml
crates/idl-parser/src/: lib.rs
crates/instrumentor/: Cargo.toml
crates/instrumentor/src/: lib.rs
crates/report/: Cargo.toml
crates/report/src/: lib.rs
docs/: README.md
docs/v0.1/: devlog.txt  example-TODO.txt  proptest-vs-krastor.md
examples/01-meme-coin/: Cargo.toml  README.md
examples/01-meme-coin/src/: lib.rs
examples/02-nft/: Cargo.toml  README.md
examples/02-nft/src/: lib.rs
examples/03-stock/: Cargo.toml  README.md
examples/03-stock/docs/: TODO.txt
examples/03-stock/relayer/: main.py
examples/03-stock/src/: errors.rs  instructions.rs  lib.rs  math.rs  state.rs
examples/03-stock/tests/: integration_tests.rs
examples/04-quant/: README.md
examples/05-rwa-00/: README.md
examples/05-rwa-01/: README.md
examples/06-gamefi/: README.md
examples/07-derives/: README.md
examples/meme-coin/: Cargo.toml
examples/meme-coin/src/: lib.rs
examples/vulnerable/: Cargo.toml
examples/vulnerable/src/: lib.rs
