[workspace]
resolver = "2"
members = [
    "crates/fuzz-core",
    "crates/idl-parser",
    "crates/report",
    "crates/cli",
    "crates/instrumentor",
    # "examples/vulnerable",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["arielzsh"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
