[package]
name = "cargo-krastor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Krastor CLI — init, fuzz run, repro, coverage commands"

[[bin]]
name = "cargo-krastor"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
rand = "0.8"
krastor-fuzz-core = { path = "../fuzz-core" }
krastor-idl-parser = { path = "../idl-parser" }
