[package]
name = "krastor-report"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Coverage HTML report generator + crash JSON persistence"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
krastor-fuzz-core = { path = "../fuzz-core" }
chrono = "0.4"